Removing the compile errors by just putting whatever, I need to build.